# Eitor

./: CMakeLists.txt  EXPLAIN.md  README.md
include/: buffer.h  editor.h  terminal.h
src/: buffer.c  editor.c  main.c  terminal.c
